--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,30 @@
+<div class="container-fluid app-content px-5">
+	<div class="row px-5">
+	  <div class="col-2" style="max-width: 9vw;">
+		<img class="pl-2" src="./assets/img/sosphone.png" style="width:7vw">
+	  </div>
+	  <div class="col" style="padding-top: 1.5%;">
+		<h3 class="lead shift-title" style="font-size:1.5vw;">(SOS)</h3>
+		<h1 class="lead" style="font-size:1.5vw">Single On-call Service</h1>
+	  </div>
+	</div>
+
+	<div class="row px-5">
+		<div class="col">
+			<h1 style="font-size:10vw; color: #336E7B;">Hello!</h1>
+			<p class="lead px-2" style="font-size:2vw">Welcome to SOS service, you can submit a ticket with <span style="color: red;">high priority</span> here.</p>
+		</div>
+	  </div>
+	  <div class="row">
+		<div class="mx-auto text-center" style=" margin: 5% auto;">
+			<h1 class="lead mb-3" style="font-size:1.5vw; margin-top:1rem;">Click here</h1>
+			<a class="anchor" href="/home#New"><img src="./assets/img/down.png" style="width:4vw;"></a>
+		</div>
+	  </div>
+  </div>
+
 <div class="container-fluid app-content">
-	<div class="section-title">
+	<!-- <div class="section-title">
 		<div class="row">
 			<div class="col-xs-2">
 				<img src="./assets/img/sosphone.png" style="width:12vw">
@@ -21,7 +46,7 @@
 		<button id="clickhere" ><a class="anchor" href="/home#New"><img src="./assets/img/down.png" style="width:4vw;"></a></button>
 		<h1 class="lead" style="font-size:1.5vw; margin-top:1rem;">Click here</h1>
 
-	</div>
+	</div> -->
 
 	<div class="section-data" id="New">
 		<p class="lead text-center" style="font-size:2.8vw; padding-top:2%;" id="instruction"><b>Complete the ticket</b></p>
