--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
 	  <div class="row">
 		<div class="mx-auto text-center" style=" margin: 5% auto;">
 			<h1 class="lead mb-3" style="font-size:1.5vw; margin-top:1rem;">Click here</h1>
-			<a class="anchor" href="/home#New"><img src="./assets/img/down.png" style="width:4vw;"></a>
+			<a class="anchor" href="/home#sectionteam"><img src="./assets/img/down.png" style="width:4vw;"></a>
 		</div>
 	  </div>
   </div>
@@ -48,9 +48,59 @@
 
 	</div> -->
 
-	<div class="section-data" id="New">
-		<p class="lead text-center" style="font-size:2.8vw; padding-top:2%;" id="instruction"><b>Complete the ticket</b></p>
-		<div class="row">
+	<div class="section-data">
+		<p id="sectionteam"></p>
+		<p class="lead text-center" style="font-size: 2.7vw;
+		padding-top: 3rem;
+		margin-bottom: 3rem;
+		color: #95989A;
+		font-weight: bold;" id="instruction">Complete your ticket</p>
+		
+		<div class="container">
+			<div class="row justify-content-md-center">
+				<div class="col-md-2 push-md-2" style="max-width:8vw;"><img src="./assets/img/user.png" style="width:6vw;" id="shift-logo"></div>
+				<div class="col-md-6 pull-md-6">
+						<label for="example-text-input" class="col-2 col-form-label" style="font-size:1vw; color: #95989A;">Customer</label>
+						<input class="form-control" type="text" id="example-text-input"  [placeholder]="UsernameBadge">
+				</div>
+			</div>
+			<div class="row justify-content-md-center">
+				<div  class="col-md-8" style="padding: 0 35px;">
+						<p style="font-size:1.5vw; padding-top:2rem;  color: #95989A;">Application</p>
+						<div class="dropdown">
+							<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+								aria-expanded="false"><span id="selected">Chose team</span><span class="caret"></span></button>
+								
+							<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+								<a class="dropdown-item" >Retail</a>
+								<a class="dropdown-item" href="#">OTC</a>
+								<a class="dropdown-item" href="#">Siebel Technical Service</a>
+								<a class="dropdown-item" href="#">GPM</a>
+								<a class="dropdown-item" href="#">EDI CS and XCOM</a>
+								<a class="dropdown-item" href="#">S.W.I.T.F. - Society for Worldwide Interbank Financial Telecommunication</a>
+								<a class="dropdown-item" href="#">M&S Secondary Distributions</a>
+								<a class="dropdown-item" href="#">Basis Output and Archiving</a>
+								
+							</div>
+						</div>
+				</div>
+			</div>
+			<div class="row justify-content-md-center">
+					<div  class="col-md-8" style="padding: 0 35px; margin-bottom: 7rem;">
+						<label for="comment" style="font-size:1.5vw; padding-top: 2rem;     color: #95989A;">Description</label>
+						<textarea class="form-control" rows="4" id="comment" id="example-text-description" ></textarea>
+
+						<div style="text-align: center;">
+							<button type="button" class="btn btn-primary" style="margin-top:2vw;" id="button-submit" (click)="showText()">
+								<h2 style="font-size:1.4vw;   margin-bottom: 0;">SUBMIT</h2>
+						</button>						
+						</div>
+					</div>
+			</div>
+
+		</div>
+
+		<!-- <div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-1" id="shift-logo">
 				<img src="./assets/img/user.png" style="width:6vw;" id="shift-logo">
@@ -59,8 +109,8 @@
 				<label for="example-text-input" class="col-2 col-form-label" style="font-size:1vw;"><b>Customer</b></label>
 				<input class="form-control" type="text" id="example-text-input" style="" [placeholder]="UsernameBadge">
 			</div>
-		</div>
-		<div class="row">
+		</div> -->
+		<!-- <div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-1">
 				
@@ -82,20 +132,20 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="row">
+		</div> -->
+		<!-- <div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-1">
 				<label for="comment" style="font-size:1.5vw; padding-top:20%;">Description</label>
 				<textarea class="form-control" rows="4" id="comment" id="example-text-description" style=""></textarea>
 			</div>
-		</div>
-		<div class="row">
+		</div> -->
+		<!-- <div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-1">
 				<button type="button" class="btn btn-primary test" style="margin-top:1vw;" id="button-submit" (click)="showText()"><h2 style="font-size:1vw;">SUBMIT</h2></button>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 	<div class="team-member" id="1team-members">	
