add bar chart on report page

--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,5 +1,4 @@
-<div class="content-all">
-	<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark" style=" margin-top: 3rem;">
 		<h6 style="font-size:1vw;" id="team">Report - Weekly oncall report</h6>
 		<!--<li class="nav-item dropdown" id="dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
@@ -10,29 +9,43 @@
         </div>
       </li>-->
 	</nav>
+<div class="content-all col-12">
+
 	<div class="row">
-		<div class="col-4">
-			<div class="row">
-				<div class="col-4-data">
-					<label for="example-date-input"> <b style="font-size:1.1vw;">Date from:</b></label>
-				</div>
-				<div class="col">
-					<input class="form-control" type="date" value="2017-08-19" id="example-date-input">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-4-data">
-					<label for="example-date-input"> <b style="font-size:1.1vw; margin-left: 1.7vw;">Date to:</b></label>
-				</div>
-				<div class="col">
-					<input class="form-control" type="date" value="2017-08-19" id="example-date-input">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-4-data">
-					<b style="font-size:1.1vw; margin-left: 1.7vw;">Choose Group:</b>
-				</div>
-			</div>
+		<div class="col-3">
+			<!-- <div class="row"> -->
+          <div class="form-inline text-label" >
+            <div class="form-group">
+                <label  for="example-date-input" style="display: inline-block; width: 6vw;"> 
+                  <b  style="font-size:1.1vw;">Date from:</b>
+                </label>
+              <input  class="form-control" id="example-date-input" type="date" value="2017-08-19" style="display: inline-block; margin-left: 20px;">
+            </div>
+          </div>
+        <!-- </div> -->
+
+        <!-- <div class="row"> -->
+          <div class="form-inline text-label" >
+              <div class="form-group">
+                  <label  for="example-date-input" style="display: inline-block; width: 6vw;"> 
+                    <b  style="font-size:1.1vw;">Date to:</b>
+                  </label>
+                <input  class="form-control" id="example-date-input" type="date" value="2017-08-19" style="display: inline-block; margin-left: 20px;">
+              </div>
+          </div>
+        <!-- </div> -->
+
+        <!-- <div class="row"> -->
+          <div class="form-inline text-label" >
+              <div class="form-group">
+                  <label  for="example-date-input" style="display: inline-block; "> 
+                    <b  style="font-size:1.1vw;">Choose Group:</b>
+                  </label>
+                
+              </div>
+          </div>
+			  <!-- </div> -->
+
 			<div class="row">
 				<div class="card">
 					<div class="card-block">
@@ -44,27 +57,27 @@
     <span class="custom-control-description"><b style="font-size:1vw;">OTC</b></span>
   </label>
   </div>
-  <div class="checkteam">
-    <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input" checked="true">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">Retail</b></span>
-  </label>
-</div>
     <div class="checkteam">
-    <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input" checked="true">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">Siebel Technical Service</b></span>
-  </label>
-  </div>
-  <div class="checkteam">
-    <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input" checked="true">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">GPM</b></span>
-  </label>
-  </div>
+      <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+      <input type="checkbox" class="custom-control-input" checked="true">
+      <span class="custom-control-indicator"></span>
+      <span class="custom-control-description"><b style="font-size:1vw;">Retail</b></span>
+      </label>
+    </div>
+    <div class="checkteam">
+      <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+        <input type="checkbox" class="custom-control-input" checked="true">
+        <span class="custom-control-indicator"></span>
+        <span class="custom-control-description"><b style="font-size:1vw;">Siebel Technical Service</b></span>
+      </label>
+    </div>
+    <div class="checkteam">
+        <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+          <input type="checkbox" class="custom-control-input" checked="true">
+          <span class="custom-control-indicator"></span>
+          <span class="custom-control-description"><b style="font-size:1vw;">GPM</b></span>
+        </label>
+    </div>
 
 <div class="checkteam">
     <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
@@ -110,8 +123,13 @@
 
 
 		</div>
-		<div class="col" style="background:yellow;">
-      Graph
+		<div class="col">
+      <!-- Graph -->
+
+      <div class="col-11" >
+        <chart [options]="options" style=" height: 550px;  width:100%; position:absolute; left: 25px;"></chart>
+      </div>
+    
 
 		</div>
 	</div>
