--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark" style=" margin-top: 3rem;">
-		<h6 style="font-size:1vw;" id="team">Report - Weekly oncall report</h6>
-		<!--<li class="nav-item dropdown" id="dropdown">
+  <h6 style="font-size:1vw;" id="team">Report - Weekly oncall report</h6>
+  <!--<li class="nav-item dropdown" id="dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
         </a>
         <div class="dropdown-menu">
@@ -8,129 +8,272 @@
           <a class="dropdown-item" href="#">Another action</a>
         </div>
       </li>-->
-	</nav>
+</nav>
 <div class="content-all col-12">
 
-	<div class="row">
-		<div class="col-3">
-			<!-- <div class="row"> -->
-          <div class="form-inline text-label" >
-            <div class="form-group">
-                <label  for="example-date-input" style="display: inline-block; width: 6vw;"> 
-                  <b  style="font-size:1.1vw;">Date from:</b>
-                </label>
-              <input  class="form-control" id="example-date-input" type="date" value="2017-10-08" style="display: inline-block; margin-left: 20px;">
-            </div>
-          </div>
-        <!-- </div> -->
+  <div class="row">
+    <div class="col-3">
+      <!-- <div class="row"> -->
+      <div class="form-inline text-label">
+        <div class="form-group">
+          <label for="example-date-input" style="display: inline-block; width: 6vw;">
+            <b style="font-size:1.1vw;">Date from:</b>
+          </label>
+          <input class="form-control" id="example-date-input" type="date" value="2017-10-08" style="display: inline-block; margin-left: 20px;">
+        </div>
+      </div>
+      <!-- </div> -->
 
-        <!-- <div class="row"> -->
-          <div class="form-inline text-label" >
-              <div class="form-group">
-                  <label  for="example-date-input" style="display: inline-block; width: 6vw;"> 
-                    <b  style="font-size:1.1vw;">Date to:</b>
-                  </label>
-                <input  class="form-control" id="example-date-input" type="date" value="2017-11-04" style="display: inline-block; margin-left: 20px;">
-              </div>
-          </div>
-        <!-- </div> -->
+      <!-- <div class="row"> -->
+      <div class="form-inline text-label">
+        <div class="form-group">
+          <label for="example-date-input" style="display: inline-block; width: 6vw;">
+            <b style="font-size:1.1vw;">Date to:</b>
+          </label>
+          <input class="form-control" id="example-date-input" type="date" value="2017-11-04" style="display: inline-block; margin-left: 20px;">
+        </div>
+      </div>
+      <!-- </div> -->
 
-        <!-- <div class="row"> -->
-          <div class="form-inline text-label" >
-              <div class="form-group">
-                  <label  for="example-date-input" style="display: inline-block; "> 
-                    <b  style="font-size:1.1vw;">Choose Group:</b>
-                  </label>
-                
-              </div>
-          </div>
-			  <!-- </div> -->
+      <!-- <div class="row"> -->
+      <div class="form-inline text-label">
+        <div class="form-group">
+          <label for="example-date-input" style="display: inline-block; ">
+            <b style="font-size:1.1vw;">Choose Group:</b>
+          </label>
 
-			<div class="row">
-				<div class="card">
-					<div class="card-block">
-						<div class="col-checkbox">
+        </div>
+      </div>
+      <!-- </div> -->
+
+      <div class="row">
+        <div class="card">
+          <div class="card-block">
+            <div class="col-checkbox">
               <div class="checkteam" style="margin-top:1.2vw;">
-							<label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input" checked="true">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">OTC</b></span>
-  </label>
-  </div>
-    <div class="checkteam">
-      <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-      <input type="checkbox" class="custom-control-input" checked="true">
-      <span class="custom-control-indicator"></span>
-      <span class="custom-control-description"><b style="font-size:1vw;">Retail</b></span>
-      </label>
-    </div>
-    <div class="checkteam">
-      <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-        <input type="checkbox" class="custom-control-input" checked="true">
-        <span class="custom-control-indicator"></span>
-        <span class="custom-control-description"><b style="font-size:1vw;">Siebel Technical Service</b></span>
-      </label>
-    </div>
-    <div class="checkteam">
-        <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-          <input type="checkbox" class="custom-control-input" checked="true">
-          <span class="custom-control-indicator"></span>
-          <span class="custom-control-description"><b style="font-size:1vw;">GPM</b></span>
-        </label>
-    </div>
+                <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+                  <input type="checkbox" class="custom-control-input" checked="true">
+                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-description">
+                    <b style="font-size:1vw;">OTC</b>
+                  </span>
+                </label>
+              </div>
+              <div class="checkteam">
+                <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+                  <input type="checkbox" class="custom-control-input" checked="true">
+                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-description">
+                    <b style="font-size:1vw;">Retail</b>
+                  </span>
+                </label>
+              </div>
+              <div class="checkteam">
+                <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+                  <input type="checkbox" class="custom-control-input" checked="true">
+                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-description">
+                    <b style="font-size:1vw;">Siebel Technical Service</b>
+                  </span>
+                </label>
+              </div>
+              <div class="checkteam">
+                <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+                  <input type="checkbox" class="custom-control-input" checked="true">
+                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-description">
+                    <b style="font-size:1vw;">GPM</b>
+                  </span>
+                </label>
+              </div>
 
-<div class="checkteam">
-    <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input" checked="true">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">EDI CS and XCOM</b></span>
-  </label>
-</div>
-<div class="checkteam">
-    <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input" checked="true">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">M&S Secondary Distributions</b></span>
-  </label>
-</div>
- <div class="checkteam">
-    <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input" checked="true">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">Basis Output and Archiving</b></span>
-  </label>
-</div>
-<div class="checkteam">
-    <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input" checked="true">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">Basis Output and Archiving</b></span>
-  </label>
-</div>
-<div class="checkteam">
-    <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input" checked="true">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">S.W.I.T.F. - Society for Worldwide<br>Interbank Financial Telecommunication</b></span>
-  </label>
-  <br><br>
-	</div>
-						</div>
-            
-					</div>
-				</div>
-			</div>
+              <div class="checkteam">
+                <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+                  <input type="checkbox" class="custom-control-input" checked="true">
+                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-description">
+                    <b style="font-size:1vw;">EDI CS and XCOM</b>
+                  </span>
+                </label>
+              </div>
+              <div class="checkteam">
+                <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+                  <input type="checkbox" class="custom-control-input" checked="true">
+                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-description">
+                    <b style="font-size:1vw;">M&S Secondary Distributions</b>
+                  </span>
+                </label>
+              </div>
+              <div class="checkteam">
+                <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+                  <input type="checkbox" class="custom-control-input" checked="true">
+                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-description">
+                    <b style="font-size:1vw;">Basis Output and Archiving</b>
+                  </span>
+                </label>
+              </div>
+              <div class="checkteam">
+                <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+                  <input type="checkbox" class="custom-control-input" checked="true">
+                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-description">
+                    <b style="font-size:1vw;">Basis Output and Archiving</b>
+                  </span>
+                </label>
+              </div>
+              <div class="checkteam">
+                <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+                  <input type="checkbox" class="custom-control-input" checked="true">
+                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-description">
+                    <b style="font-size:1vw;">S.W.I.T.F. - Society for Worldwide
+                      <br>Interbank Financial Telecommunication</b>
+                  </span>
+                </label>
+                <br>
+                <br>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
 
 
-		</div>
-		<div class="col">
+    </div>
+    <div class="col">
       <!-- Graph -->
 
-      <div class="col-11" >
+      <div class="col-11">
         <chart [options]="options" style=" height: 550px;  width:100%; position:absolute; left: 25px;"></chart>
       </div>
-    
 
-		</div>
-	</div>
+
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-11 table-detail">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th style="min-width: 130px;">Incident number</th>
+            <th>User</th>
+            <th>Oncall</th>
+            <th>Products</th>
+            <th>Group</th>
+            <th style="min-width: 125px;">Date Submitted</th>
+            <th style="min-width: 115px;">Response time</th>
+            <th>Description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="text-red">S0S0000002566</td>
+            <td>Charida,
+                Pethyothin</td>
+            <td>Sathapana,
+                Sakhet</td>
+            <td>STRIPES EU OTC
+                Order Processing</td>
+            <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
+            <td>October
+                9th 2017
+                11:32:06 pm</td>
+            <td>0 hrs 5 mins
+                42 secs
+                </td>
+            <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
+          </tr>
+          <tr>
+              <td class="text-yellow">S0S0000002566</td>
+              <td>Charida,
+                  Pethyothin</td>
+              <td>Sathapana,
+                  Sakhet</td>
+              <td>STRIPES EU OTC
+                  Order Processing</td>
+              <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
+              <td>October
+                  9th 2017
+                  11:32:06 pm</td>
+              <td>0 hrs 5 mins
+                  42 secs
+                  </td>
+              <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
+            </tr>
+          <tr>
+              <td class="text-green">S0S0000002566</td>
+              <td>Charida,
+                  Pethyothin</td>
+              <td>Sathapana,
+                  Sakhet</td>
+              <td>STRIPES EU OTC
+                  Order Processing</td>
+              <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
+              <td>October
+                  9th 2017
+                  11:32:06 pm</td>
+              <td>0 hrs 5 mins
+                  42 secs
+                  </td>
+              <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
+          </tr>
+          <tr>
+              <td class="text-red">S0S0000002566</td>
+              <td>Charida,
+                  Pethyothin</td>
+              <td>Sathapana,
+                  Sakhet</td>
+              <td>STRIPES EU OTC
+                  Order Processing</td>
+              <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
+              <td>October
+                  9th 2017
+                  11:32:06 pm</td>
+              <td>0 hrs 5 mins
+                  42 secs
+                  </td>
+              <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
+            </tr>
+            <tr>
+                <td class="text-yellow">S0S0000002566</td>
+                <td>Charida,
+                    Pethyothin</td>
+                <td>Sathapana,
+                    Sakhet</td>
+                <td>STRIPES EU OTC
+                    Order Processing</td>
+                <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
+                <td>October
+                    9th 2017
+                    11:32:06 pm</td>
+                <td>0 hrs 5 mins
+                    42 secs
+                    </td>
+                <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
+              </tr>
+            <tr>
+                <td class="text-green">S0S0000002566</td>
+                <td>Charida,
+                    Pethyothin</td>
+                <td>Sathapana,
+                    Sakhet</td>
+                <td>STRIPES EU OTC
+                    Order Processing</td>
+                <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
+                <td>October
+                    9th 2017
+                    11:32:06 pm</td>
+                <td>0 hrs 5 mins
+                    42 secs
+                    </td>
+                <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
