--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-dark" style=" margin-top: 3rem;">
-  <h6 style="font-size:1vw;" id="team">Report - Weekly oncall report</h6>
+  <h5 id="team">Report - Weekly oncall report</h5>
   <!--<li class="nav-item dropdown" id="dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
         </a>
@@ -16,8 +16,8 @@
       <!-- <div class="row"> -->
       <div class="form-inline text-label">
         <div class="form-group">
-          <label for="example-date-input" style="display: inline-block; width: 6vw;">
-            <b style="font-size:1.1vw;">Date from:</b>
+          <label for="example-date-input" style="display: inline-block; width: 81px;">
+            <b style="font-size:1rem;">Date from:</b>
           </label>
           <input class="form-control" id="example-date-input" type="date" value="2017-10-08" style="display: inline-block; margin-left: 20px;">
         </div>
@@ -27,8 +27,8 @@
       <!-- <div class="row"> -->
       <div class="form-inline text-label">
         <div class="form-group">
-          <label for="example-date-input" style="display: inline-block; width: 6vw;">
-            <b style="font-size:1.1vw;">Date to:</b>
+          <label for="example-date-input" style="display: inline-block; width: 81px;">
+            <b style="font-size:1rem;">Date to:</b>
           </label>
           <input class="form-control" id="example-date-input" type="date" value="2017-11-04" style="display: inline-block; margin-left: 20px;">
         </div>
@@ -39,7 +39,7 @@
       <div class="form-inline text-label">
         <div class="form-group">
           <label for="example-date-input" style="display: inline-block; ">
-            <b style="font-size:1.1vw;">Choose Group:</b>
+            <b style="font-size:1rem;">Choose Group:</b>
           </label>
 
         </div>
@@ -55,7 +55,7 @@
                   <input type="checkbox" class="custom-control-input" checked="true">
                   <span class="custom-control-indicator"></span>
                   <span class="custom-control-description">
-                    <b style="font-size:1vw;">OTC</b>
+                    OTC
                   </span>
                 </label>
               </div>
@@ -64,7 +64,7 @@
                   <input type="checkbox" class="custom-control-input" checked="true">
                   <span class="custom-control-indicator"></span>
                   <span class="custom-control-description">
-                    <b style="font-size:1vw;">Retail</b>
+                    Retail
                   </span>
                 </label>
               </div>
@@ -73,7 +73,7 @@
                   <input type="checkbox" class="custom-control-input" checked="true">
                   <span class="custom-control-indicator"></span>
                   <span class="custom-control-description">
-                    <b style="font-size:1vw;">Siebel Technical Service</b>
+                    Siebel Technical Service
                   </span>
                 </label>
               </div>
@@ -82,7 +82,7 @@
                   <input type="checkbox" class="custom-control-input" checked="true">
                   <span class="custom-control-indicator"></span>
                   <span class="custom-control-description">
-                    <b style="font-size:1vw;">GPM</b>
+                    GPM
                   </span>
                 </label>
               </div>
@@ -92,7 +92,7 @@
                   <input type="checkbox" class="custom-control-input" checked="true">
                   <span class="custom-control-indicator"></span>
                   <span class="custom-control-description">
-                    <b style="font-size:1vw;">EDI CS and XCOM</b>
+                    EDI CS and XCOM
                   </span>
                 </label>
               </div>
@@ -101,7 +101,7 @@
                   <input type="checkbox" class="custom-control-input" checked="true">
                   <span class="custom-control-indicator"></span>
                   <span class="custom-control-description">
-                    <b style="font-size:1vw;">M&S Secondary Distributions</b>
+                    M&S Secondary Distributions
                   </span>
                 </label>
               </div>
@@ -110,7 +110,7 @@
                   <input type="checkbox" class="custom-control-input" checked="true">
                   <span class="custom-control-indicator"></span>
                   <span class="custom-control-description">
-                    <b style="font-size:1vw;">Basis Output and Archiving</b>
+                    Basis Output and Archiving
                   </span>
                 </label>
               </div>
@@ -119,7 +119,7 @@
                   <input type="checkbox" class="custom-control-input" checked="true">
                   <span class="custom-control-indicator"></span>
                   <span class="custom-control-description">
-                    <b style="font-size:1vw;">Basis Output and Archiving</b>
+                    Basis Output and Archiving
                   </span>
                 </label>
               </div>
@@ -128,8 +128,7 @@
                   <input type="checkbox" class="custom-control-input" checked="true">
                   <span class="custom-control-indicator"></span>
                   <span class="custom-control-description">
-                    <b style="font-size:1vw;">S.W.I.T.F. - Society for Worldwide
-                      <br>Interbank Financial Telecommunication</b>
+                    S.W.I.T.F. - Society for Worldwide Interbank Financial Telecommunication
                   </span>
                 </label>
                 <br>
@@ -150,11 +149,16 @@
         <chart [options]="options" style=" height: 550px;  width:100%; position:absolute; left: 25px;"></chart>
       </div>
 
-
     </div>
   </div>
 
-  <div class="row">
+  <div class="row" style="margin-top: 3vh;">
+    <a class="anchor" href="/report#tableDetail" style=" position: absolute; right: 5vh;">
+      <img src="./assets/img/down.png" style="width: 2.5vw;">
+    </a>
+  </div>
+
+  <div class="row" id="tableDetail">
     <div class="col-11 table-detail">
       <table class="table table-striped">
         <thead>
@@ -172,106 +176,82 @@
         <tbody>
           <tr>
             <td class="text-red">S0S0000002566</td>
-            <td>Charida,
-                Pethyothin</td>
-            <td>Sathapana,
-                Sakhet</td>
-            <td>STRIPES EU OTC
-                Order Processing</td>
+            <td>Charida, Pethyothin
+            </td>
+            <td>Sathapana, Sakhet
+            </td>
+            <td>STRIPES EU OTC Order Processing</td>
             <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
-            <td>October
-                9th 2017
-                11:32:06 pm</td>
-            <td>0 hrs 5 mins
-                42 secs
-                </td>
+            <td>October 9th 2017 11:32:06 pm</td>
+            <td>0 hrs 5 mins 42 secs
+            </td>
             <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
           </tr>
           <tr>
-              <td class="text-yellow">S0S0000002566</td>
-              <td>Charida,
-                  Pethyothin</td>
-              <td>Sathapana,
-                  Sakhet</td>
-              <td>STRIPES EU OTC
-                  Order Processing</td>
-              <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
-              <td>October
-                  9th 2017
-                  11:32:06 pm</td>
-              <td>0 hrs 5 mins
-                  42 secs
-                  </td>
-              <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
-            </tr>
-          <tr>
-              <td class="text-green">S0S0000002566</td>
-              <td>Charida,
-                  Pethyothin</td>
-              <td>Sathapana,
-                  Sakhet</td>
-              <td>STRIPES EU OTC
-                  Order Processing</td>
-              <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
-              <td>October
-                  9th 2017
-                  11:32:06 pm</td>
-              <td>0 hrs 5 mins
-                  42 secs
-                  </td>
-              <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
+            <td class="text-yellow">S0S0000002566</td>
+            <td>Charida, Pethyothin
+            </td>
+            <td>Sathapana, Sakhet
+            </td>
+            <td>STRIPES EU OTC Order Processing</td>
+            <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
+            <td>October 9th 2017 11:32:06 pm</td>
+            <td>0 hrs 5 mins 42 secs
+            </td>
+            <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
           </tr>
           <tr>
-              <td class="text-red">S0S0000002566</td>
-              <td>Charida,
-                  Pethyothin</td>
-              <td>Sathapana,
-                  Sakhet</td>
-              <td>STRIPES EU OTC
-                  Order Processing</td>
-              <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
-              <td>October
-                  9th 2017
-                  11:32:06 pm</td>
-              <td>0 hrs 5 mins
-                  42 secs
-                  </td>
-              <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
-            </tr>
-            <tr>
-                <td class="text-yellow">S0S0000002566</td>
-                <td>Charida,
-                    Pethyothin</td>
-                <td>Sathapana,
-                    Sakhet</td>
-                <td>STRIPES EU OTC
-                    Order Processing</td>
-                <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
-                <td>October
-                    9th 2017
-                    11:32:06 pm</td>
-                <td>0 hrs 5 mins
-                    42 secs
-                    </td>
-                <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
-              </tr>
-            <tr>
-                <td class="text-green">S0S0000002566</td>
-                <td>Charida,
-                    Pethyothin</td>
-                <td>Sathapana,
-                    Sakhet</td>
-                <td>STRIPES EU OTC
-                    Order Processing</td>
-                <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
-                <td>October
-                    9th 2017
-                    11:32:06 pm</td>
-                <td>0 hrs 5 mins
-                    42 secs
-                    </td>
-                <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
-            </tr>
+            <td class="text-green">S0S0000002566</td>
+            <td>Charida, Pethyothin
+            </td>
+            <td>Sathapana, Sakhet
+            </td>
+            <td>STRIPES EU OTC Order Processing</td>
+            <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
+            <td>October 9th 2017 11:32:06 pm</td>
+            <td>0 hrs 5 mins 42 secs
+            </td>
+            <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
+          </tr>
+          <tr>
+            <td class="text-red">S0S0000002566</td>
+            <td>Charida, Pethyothin
+            </td>
+            <td>Sathapana, Sakhet
+            </td>
+            <td>STRIPES EU OTC Order Processing</td>
+            <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
+            <td>October 9th 2017 11:32:06 pm</td>
+            <td>0 hrs 5 mins 42 secs
+            </td>
+            <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
+          </tr>
+          <tr>
+            <td class="text-yellow">S0S0000002566</td>
+            <td>Charida, Pethyothin
+            </td>
+            <td>Sathapana, Sakhet
+            </td>
+            <td>STRIPES EU OTC Order Processing</td>
+            <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
+            <td>October 9th 2017 11:32:06 pm</td>
+            <td>0 hrs 5 mins 42 secs
+            </td>
+            <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
+          </tr>
+          <tr>
+            <td class="text-green">S0S0000002566</td>
+            <td>Charida, Pethyothin
+            </td>
+            <td>Sathapana, Sakhet
+            </td>
+            <td>STRIPES EU OTC Order Processing</td>
+            <td>S.W.I.T.F - Society for worldwide interbank financial telecommunication</td>
+            <td>October 9th 2017 11:32:06 pm</td>
+            <td>0 hrs 5 mins 42 secs
+            </td>
+            <td>UC4MON-GBP J3-202 - JSF- 230747 - idenifier - ROIKPIPR Host name: AMPB</td>
+          </tr>
         </tbody>
       </table>
     </div>
