add style on member/index

--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -1,5 +1,51 @@
-<div class="col" style="margin-top: 4.5rem;">
-    <router-outlet></router-outlet>
-    <h1>TEST</h1>
+<div class="col sub-header">
+    <nav class="navbar " >
+        <h5 class="text">OTC Team</h5>
+    </nav>
+
+
+    <div class="row no-gutters">
+        <div class="col-6">
+            <div class="team-member">
+                <div class="row">
+                    <a class="btn btn-add-member" >
+                        <img src="./assets/img/user2.png" />
+                    </a>
+ 
+                  <div class="col text-center">
+                    <h1 style="     font-size: 2.6rem;
+                    color: #47bdcd;
+                    text-decoration: underline;
+                    text-transform: uppercase;
+                    margin-bottom: 30px;">Members</h1>
+                  </div>
+                </div>
+        
+                <div class="col-xs-11 col-md-11 col-lg-8" style="margin: auto; overflow: auto;">
+                    <div class="list-group"   id="list-team-member" (click)="showCard()">
+                        <!--*ngFor = "let item of info"-->
+                        <!--<h1 style="font-size:20vw;"> {{item.GroupUserID}}</h1>-->
+                        <a href="#" class="list-group-item list-group-item-action active">
+                          Cras justo odio
+                        </a>
+                        <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+                        <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+                        <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+                        <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+                        <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+                        <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+                        <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+                        <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+                        <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+                      </div>
+                </div>
+           
+              </div>
+        </div>
+        <div class="col-6">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+
 </div>
 
