--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -15,22 +15,22 @@
 		<div class="row" id="col">
 			<div class="team-member">
 				<div class="row">
-          <div class="col-1">
-					<a class="btn btn-bd-blue navbar-brand js-scroll-trigger" style="color: #4ECDC4" id="borderadduser">
-						<img src="./assets/img/user2.png" id="addpeople" style="width:2vw; height:2vw; margin-left:2vw;">
-					</a>
-          </div>
-          <div class="col">
-					<h1 style="font-size:3vw; margin-top:3vh; margin-left: 15vw; color: #336E7B;">Members</h1>
-          </div>
+					<div class="col-1">
+						<a class="btn btn-bd-blue navbar-brand js-scroll-trigger" style="color: #4ECDC4" id="borderadduser">
+							<img src="./assets/img/user2.png" id="addpeople" style="width:2vw; height:2vw; margin-left:2vw;">
+						</a>
+					</div>
+					<div class="col">
+						<h1 style="font-size:3vw; margin-top:3vh; margin-left: 15vw; color: #336E7B;">Members</h1>
+					</div>
 				</div>
 
-				<div class="list-group" style="margin-left:10vw;" id="list-team-member" (click)="showCard()" >
+				<div class="list-group" style="margin-left:10vw;" id="list-team-member" (click)="showCard()">
 					<!--*ngFor = "let item of info"-->
 					<!--<h1 style="font-size:20vw;"> {{item.GroupUserID}}</h1>-->
-					<a href="#" class="list-group-item list-group-item-action active" >
-    Cras justo odio
-  </a>
+					<a href="#" class="list-group-item list-group-item-action active">
+						Cras justo odio
+					</a>
 					<a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
 					<a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
 					<a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
@@ -56,8 +56,12 @@
 								</div>
 								<div class="info">
 									<div class="button2">
-										<button type="button" class="btn btn-info">	<h4 style="font-size:0.7vw;" id="button2">Edit</h4></button>
-										<button type="button" class="btn btn-danger"><h4 style="font-size:0.7vw;" id="button2">Delete	</h4></button>
+										<button type="button" class="btn btn-info">
+											<h4 style="font-size:0.7vw;" id="button2">Edit</h4>
+										</button>
+										<button type="button" class="btn btn-danger">
+											<h4 style="font-size:0.7vw;" id="button2">Delete </h4>
+										</button>
 									</div>
 									<div class="detail">
 										<h4 class="card-title" style="font-size:2vw; ">{{username}}</h4>
@@ -67,7 +71,7 @@
 								</div>
 							</div>
 						</div>
-            <!--<hr width="90%" color=l ightslategray size=1>-->
+						<!--<hr width="90%" color=l ightslategray size=1>-->
 						<div class="info">
 							<div class="row">
 								<div class="col-4">
@@ -109,35 +113,43 @@
 							<div class="row">
 								<div class="col-4">
 									<label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-                   <input type="checkbox" class="custom-control-input">
-                   <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">Admin</b></span>
-  </label>
+										<input type="checkbox" class="custom-control-input">
+										<span class="custom-control-indicator"></span>
+										<span class="custom-control-description">
+											<b style="font-size:1vw;">Admin</b>
+										</span>
+									</label>
 								</div>
 								<div class="col">
 									<label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">Work Hour Receiver</b></span>
-  </label>
+										<input type="checkbox" class="custom-control-input">
+										<span class="custom-control-indicator"></span>
+										<span class="custom-control-description">
+											<b style="font-size:1vw;">Work Hour Receiver</b>
+										</span>
+									</label>
 
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-4">
 									<label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">Level2</b></span>
-  </label>
+										<input type="checkbox" class="custom-control-input">
+										<span class="custom-control-indicator"></span>
+										<span class="custom-control-description">
+											<b style="font-size:1vw;">Level2</b>
+										</span>
+									</label>
 								</div>
 								<div class="col">
 									<label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
-    <input type="checkbox" class="custom-control-input">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description"><b style="font-size:1vw;">Acknowledgement</b></span>
-  </label>
-<hr>
+										<input type="checkbox" class="custom-control-input">
+										<span class="custom-control-indicator"></span>
+										<span class="custom-control-description">
+											<b style="font-size:1vw;">Acknowledgement</b>
+										</span>
+									</label>
+									<hr>
 								</div>
 							</div>
 						</div>
