--- a/src/app/member/member-index/member-index.component.html
+++ b/src/app/member/member-index/member-index.component.html
@@ -1,3 +1,111 @@
-<p>
-  member-index works!
-</p>
+<div class="container  border-info" style="margin-top: 10px;">
+  <div class="row" style="min-height: 510px;">
+    <div class="col-11 align-items-center">
+      <!-- <div class="row">
+        <div class="col navbar-header">
+          <h2>Information detail</h2>
+        </div>
+      </div> -->
+      <div class="row">
+        <div class="col" style="    position: absolute;
+        text-align: right;
+        top: 50px;">
+          <button>Delete</button>
+          <button>Edit</button>
+        </div>
+      </div>
+      <div class="row align-items-center no-gutters" style="margin-top: 25px; margin-bottom: 20px;">
+        <div class="col-4">
+          <img class="img-display" src="./../assets/img/user1.png" />
+        </div>
+        <div class="col">
+          <h3 class="color-info" style="margin-bottom: 0;">Surname</h3>
+          <h3 class="color-info">Lastname</h3>
+          <p class="color-info">email@email.com</p>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+      <div class="col">
+        <hr>
+        <div class="row">
+          <div class="col">
+            <div class="display-group">
+              <label>Domain</label>
+              <p class="color-info">AP</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="display-group">
+              <label>LAN ID</label>
+              <p class="color-info">KKHUMTH</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="display-group">
+              <label>Shared mailbox</label>
+              <p class="color-default">-</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="display-group">
+              <label>Alternative email</label>
+              <p class="color-default">KKHUMTH@gmail.com</p>
+            </div>
+          </div>
+        </div>
+        <hr/>
+        <div class="row">
+          <div class="col-3">
+            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+              <input type="checkbox" class="custom-control-input">
+              <span class="custom-control-indicator"></span>
+              <span class="text-selector">
+                Admin
+              </span>
+            </label>
+          </div>
+
+          <div class="col-7">
+            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+              <input type="checkbox" class="custom-control-input">
+              <span class="custom-control-indicator"></span>
+              <span class="text-selector">
+                Work Hour Receiver
+              </span>
+            </label>
+          </div>
+          <div class="col-3">
+            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+              <input type="checkbox" class="custom-control-input">
+              <span class="custom-control-indicator"></span>
+              <span class="text-selector">
+                Level2
+              </span>
+            </label>
+          </div>
+          <div class="col">
+            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+              <input type="checkbox" class="custom-control-input">
+              <span class="custom-control-indicator"></span>
+              <span class="text-selector">
+                Acknowledgement
+              </span>
+            </label>
+          </div>
+
+        </div>
+        <div class="row" style="float: right;  margin: 25px auto;">
+          <button type="button" class="btn btn-info btn-save">Save</button>
+          <button type="button" class="btn btn-danger btn-cancel">Cancel</button>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-1" style="background-color: #559CCA;">
+
+    </div>
+  </div>
+
+</div>
