--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -18,5 +18,5 @@
 					</div>
 				</div>
 
-        	<button type="button" class="btn btn-primary test" style="margin-top:4%;" id="button-submit" routerLink="/card member"><h2 style="font-size:1vw;">GO</h2></button>
+        	<button type="button" class="btn btn-primary test" style="margin-top:4%;" id="button-submit" routerLink="/member"><h2 style="font-size:1vw;">GO</h2></button>
 </div>
