install fullcalendar libs

--- a/src/app/oncall-schedule/oncall-schedule.component.html
+++ b/src/app/oncall-schedule/oncall-schedule.component.html
@@ -80,8 +80,8 @@
   </div>
 <button type="button" class="btn btn-primary test" style="margin-top:4%;" id="button-submit"><h2 style="font-size:1vw;">ADD</h2></button>
 		</div>
-		<div class="col-7" style="background: blue;">
-			Calenda
+		<div class="col-7" style="background : #fdfdfd" >
+			<angular2-fullcalendar [options]="calendarOptions"></angular2-fullcalendar>
 
 		</div>
 	</div>
