--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,5 +1,7 @@
-<nav class="navbar navbar-dark bg-dark" style=" margin-top: 3rem;">
-  <h5 id="team">Report - Weekly oncall report</h5>
+<div class="col sub-header">
+    <nav class="navbar ">
+        <h5 class="text">Report - Weekly oncall report</h5>
+    </nav>
   <!--<li class="nav-item dropdown" id="dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
         </a>
@@ -8,7 +10,7 @@
           <a class="dropdown-item" href="#">Another action</a>
         </div>
       </li>-->
-</nav>
+</div>
 <div class="content-all col-12">
 
   <div class="row">
